# open-game-engine

./: .gitignore  Architecture.md  LICENSE  OpenGames.idr  README.md  amm.act  flake.nix  get_hie.sh  open-game-engine.cabal  open-games-engine.cabal  open-games-hs.cabal  package.yaml  stack.yaml
.github/workflows/: main.yml
Tutorial/: TUTORIAL.md
act/: ACT.md  Act.hs  AmmGenerated.hs  Example.hs  Main.hs  Player.hs  README.md  main.hs  open-games-act.cabal  package.yaml  stack.yaml
act/Act/: Execution.hs  Prelude.hs  TH.hs  Utils.hs
act/Act/TH/: Dispatch.hs  Extractor.hs  State.hs
act/EVM/: TH.hs
act/Examples/: Amm.hs  AmmGenerated.hs  EVM.hs  HEVM.hs  Lido.hs  Player.hs
act/Examples/HEVM/: ActionSpaces.hs  Analytics.hs  Components.hs  Model.hs  Payoffs.hs  Strategies.hs  Types.hs
act/act-programs/: amm.act  simple.act
act/golden/: ev.golden  ev1.golden  foo.golden
act/src/: Main.hs
act/src/Act/: Execution.hs  Prelude.hs
act/src/Act/TH/: State.hs
act/src/Examples/: AmmGenerated.hs  Player.hs
act/src/Examples/HEVM/: Components.hs
act/tests/: Spec.hs
app/: Main.hs
bench/: Main.hs
evm/: Main.hs  README.md  open-games-hevm.cabal  package.yaml  stack.yaml
evm/EVM/: Prelude.hs  TH.hs
evm/Examples/: HEVM.hs  Prisoner.hs
evm/golden/: hevm.golden  prisoner.golden
evm/solidity/: AMM.sol  ERC20.sol  LidoReward.sol  Prisonner.sol  UniswapFactory.sol  Withdraw.sol
evm/src/EVM/: Prelude.hs  TH.hs
evm/src/Examples/: Components.hs  HEVM.hs  Lido.hs  Prisoner.hs
evm/src/OpenGames/Engine/: HEVMGames.hs
evm/tests/: Spec.hs
graphics/: Main.hs  package.yaml  stack.yaml
opengames/: Main.hs
solidity/: Prisonner.sol  Simple.sol
solitidy/: Withdraw.sol
solitidy/guiding-example/: info.md
src/: Graphics.hs  OpenGames.hs
src/Data/: Utils.hs
src/Engine/: AtomicGames.hs  BayesianDiagnostics.hs  BayesianDiagnosticsTLL.hs  BayesianGames.hs  BayesianGamesNonState.hs  BayesianOpenGames.hs  Costrategies.hs  DecisionClass.hs  DependentDecision.hs  Diagnostics.hs  Engine.hs  IOGames.hs  OpenGames.hs  OpenGamesClass.hs  OpticClass.hs  PolyNumerical.hs  ProbabilityAlternative.hs  PureNumerical.hs  PureNumerical2.hs  PureNumerical3.hs  PureOpenGames.hs  StatefulBayesian.hs  StatefulPayoffs.hs  SubgamePerfect.hs  TLL.hs
src/Examples/: Bayesian.hs  Bimatrix.hs  Decision.hs  ExploreStatePayoffs.hs  ExtractContextExample.hs  LemonMarket.hs  RepeatedNonState.hs  RepeatedPD.hs  RepeatedPDNonState.hs  RepetitionTest.hs  ResaleMarket.hs  Sequential.hs  SequentialMoves.hs  Signalling.hs  SimpleAuction.hs  SimultaneousMove.hs  SimultaneousMoves.hs  SubgameTest.hs  TwoStageMarkov.hs
src/Examples/Auctions/: AuctionSupportFunctions.hs  ChooseReservePrice.hs  DutchAuction.hs  SequentialAuction.hs  SimultaneousBidAuction.hs
src/Examples/Consensus/: AndGate.hs  Censor.hs  CensorStrategicAttacker.hs  DepositGame.hs  Simple.hs
src/Examples/EcologicalPublicGood/: EcologicalPublicGood.hs
src/Examples/Governance/: ChoosingGames.hs  ChoosingRandomly.hs  ChoosingStatefulRandomly.hs  InstitutionProcess.hs  Irrigation.hs  IrrigationRandom.hs  IrrigationRandom2.hs  Monitoring.hs  ThirdOption.hs  VotingGames.hs
src/Examples/KD/: Bimatrix.hs  LemonMarket.hs  Sequential.hs
src/Examples/Markov/: NStageMarkov.hs  RepeatedPD.hs  RepeatedPDNonState.hs  Staking.hs  TestSimpleMonteCarlo.hs  TwoStageMarkov.hs  TwoStageMarkovTest.hs
src/Examples/Markov/TestSimpleMonteCarlo/: Continuation.hs  StageGame.hs
src/Examples/PermitSale/: PermitSale.hs
src/Examples/Staking/: AndGateMarkov.hs  AndGateMarkovMC.hs
src/Examples/TheoryTest/: Centipede.hs
src/Examples/Token/: Concrete.hs
src/OpenGames/: Graphics.hs  Preprocessor.hs
src/OpenGames/Contracts/: Amm.hs  Execution.hs  Player.hs
src/OpenGames/Data/: Utils.hs
src/OpenGames/Engine/: AtomicGames.hs  BayesianDiagnostics.hs  BayesianDiagnosticsTLL.hs  BayesianGames.hs  BayesianGamesNonState.hs  BayesianOpenGames.hs  Copy.hs  DecisionClass.hs  DependentDecision.hs  Diagnostics.hs  Engine.hs  HEVMGames.hs  IOGames.hs  Interleaving.hs  KleisliOptics.hs  MonadOptic.hs  Nat.hs  OpenGames.hs  OpenGamesClass.hs  OpticClass.hs  PolyNumerical.hs  Pure.hs  PureNumerical.hs  PureNumerical3.hs  PureOpenGames.hs  Stateful.hs  StatefulBayesian.hs  StatefulPayoffs.hs  SubgamePerfect.hs  TLL.hs  TemporaryTest.hs  Vec.hs
src/OpenGames/Examples/: Bayesian.hs  Bimatrix.hs  BimatrixKD.hs  LemonMarket.hs  LemonMarketKD.hs  Monitoring.hs  RepetitionTest.hs  ResaleMarket.hs  Sequential.hs  Signalling.hs  SimpleAuction.hs  SubgameTest.hs
src/OpenGames/Examples/Consensus/: AndGate.hs  AndGateMarkov.hs  AndGateMarkovMC.hs  Censor.hs  CensorStrategicAttacker.hs  DepositGame.hs  Simple.hs  TestPayoffs.hs
src/OpenGames/Examples/EcologicalPublicGood/: EcologicalPublicGood.hs
src/OpenGames/Examples/Governance/: ChoosingGames.hs  ChoosingRandomly.hs  ChoosingStatefulRandomly.hs  InstitutionProcess.hs  Irrigation.hs  IrrigationRandom.hs  IrrigationRandom2.hs  Monitoring.hs  ThirdOption.hs  VotingGames.hs  VotingGames2.hs
src/OpenGames/Examples/KD/: Bimatrix.hs  LemonMarket.hs  Sequential.hs
src/OpenGames/Examples/PermitSale/: PermitSale.hs
src/OpenGames/Examples/Source/: Bayesian.hs  Bimatrix.hs  LemonMarket.hs  ResaleMarket.hs  Sequential.hs  Signalling.hs  SimpleAuction.hs
src/OpenGames/Examples/TheoryTest/: Centipede.hs
src/OpenGames/Preprocessor/: AbstractSyntax.hs  BlockSyntax.hs  Codegen.hs  Compile.hs  CompileBlock.hs  CompileSyntax.hs  FreeOpenGames.hs  Lambda.hs  Parser.hs  Preprocessor.hs  RuntimeAST.hs  TH.hs  THSyntax.hs  Types.hs
src/Preprocessor/: AbstractSyntax.hs  Compile.hs  Lambda.hs  Parser.hs  Preprocessor.hs  TH.hs  THSyntax.hs  Types.hs
tests/: ArrowTest.hs  CensorTests.hs  EqTests.hs  Spec.hs  THTests.hs  VerboseTests.hs
