name:                open-game-engine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/open-game-engine#readme
license:             AGPL
license-file:        LICENSE
author:              Jules Hedges & other authors
maintainer:          jules.hedges@strath.ac.uk
copyright:           2021 Jules Hedges & author authors
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenGames.Engine.OpticClass, OpenGames.Engine.TLL, OpenGames.Engine.OpenGames, OpenGames.Engine.KleisliOptics, OpenGames.Engine.Diagnostics, OpenGames.Engine.Pure
  build-depends:       base >= 4.7 && < 5, constraints, transformers, singletons
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jules-hedges/open-game-engine
