name:                open-games-hs
version:             0.1.0.0
synopsis:            Haskell implementation of open games
-- description:
homepage:            https://github.com/jules-hedges/open-games-hs#readme
license:             AGPL
license-file:        LICENSE
author:              Jules Hedges & other contributors
maintainer:          juleshedges.invariant@gmail.com
copyright:           2020 Jules Hedges & other contributors
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenGames.Engine.OpenGamesClass, OpenGames.Engine.Diagnostics, OpenGames.Engine.PureOpenGames,
                       OpenGames.Engine.BayesianOpenGames, OpenGames.Engine.BayesianDiagnostics,
                       OpenGames.Engine.BayesianDiagnosticsTLL, OpenGames.Engine.StatefulPayoffs,
                       OpenGames.Engine.OpticClass, OpenGames.Engine.SubgamePerfect, OpenGames.Engine.DecisionClass,
                       OpenGames.Engine.StatefulBayesian, OpenGames.Engine.DependentDecision,
                       OpenGames.Engine.PureNumerical, OpenGames.Engine.PureNumerical2, OpenGames.Engine.PureNumerical3, OpenGames.Engine.PolyNumerical,
                       OpenGames.Preprocessor.AbstractSyntax, OpenGames.Preprocessor.FreeOpenGames, OpenGames.Preprocessor.Preprocessor,
                       OpenGames.Examples.Source.Bimatrix, OpenGames.Examples.Bimatrix, OpenGames.Examples.Source.Sequential, OpenGames.Examples.Sequential,
                       OpenGames.Examples.Source.Bayesian, OpenGames.Examples.Bayesian, OpenGames.Examples.Source.Signalling, OpenGames.Examples.Signalling,
                       OpenGames.Examples.SimpleAuction, OpenGames.Examples.Source.SimpleAuction,
                       OpenGames.Examples.Source.LemonMarket, OpenGames.Examples.LemonMarket,
                       OpenGames.Examples.Source.ResaleMarket, OpenGames.Examples.ResaleMarket,
                       OpenGames.Examples.KD.Bimatrix, OpenGames.Examples.KD.Sequential, OpenGames.Examples.KD.LemonMarket,
                       OpenGames.Examples.EcologicalPublicGood.EcologicalPublicGood,
                       OpenGames.Examples.Governance.Monitoring, OpenGames.Examples.Governance.ChoosingGames, OpenGames.Examples.Governance.ChoosingRandomly,
                       OpenGames.Examples.Governance.ChoosingStatefulRandomly, OpenGames.Examples.Governance.ThirdOption,
                       OpenGames.Examples.SubgameTest, OpenGames.Examples.Governance.Irrigation,
                       OpenGames.Examples.PermitSale.PermitSale,
                       OpenGames.Examples.Consensus.Simple, OpenGames.Examples.Consensus.Censor
  build-depends:       base >= 4.7 && < 5, mtl, transformers, probability, ad, poly, profunctors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jules-hedges/open-games-hs
